# logstash_py

./: Dockerfile  README.md  pyproject.toml  requirements.txt
pylogstash/: workers.py
