[tool.poetry]
name = "logstah-py"
version = "0.1.0"
description = "Python multi-process version reads kafka and writes to mongo, works and configures like logstash"
authors = ["Johnng <Johnny@.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
kafka-python = "^2.0.2"
pymongo = "^4.5.0"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
